Fix scrolling on iOS. (#1891)
Fixes #1886

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -55,6 +55,7 @@ body {
   padding: 0;
   background-color: #5d9bc7;
   overflow: hidden;
+  -webkit-overflow-scrolling: touch;
 }
 
 section {
